[package]
name = "abacus_registers"
version = "0.1.0"
# authors = TODO
# description = TODO
# homepage = TODO
# repository = TODO
readme = "README.md"
# keywords = TODO
# categories = TODO
license = "MIT/Apache-2.0"
edition = "2021"

[lints]
#iworkspace = true

[dependencies]
code_gen = { path = "code_gen" }
tock-registers = "0.10.0"
