[package]
name = "abacus-registers"
version = "0.1.0"
description = "System to statically prevent driver device protocol bugs via Abacus DSL and typestates" 
repository = "https://github.com/abacus-rs/abacus-registers" 
readme = "README.md"
keywords = ["Drivers", "TypeStates", "Device Protocol Bugs"]
license = "MIT"
edition = "2021"

[dependencies]
code_gen = { path = "code_gen" }
tock-registers = "0.9.0"
