[package]
name = "abacus-registers"
version = "0.1.0"
description = "System to statically prevent driver device protocol bugs via Abacus DSL and typestates" 
repository = "https://github.com/abacus-rs/abacus-registers" 
readme = "README.md"
keywords = ["Drivers", "TypeStates"]
license = "MIT"
edition = "2021"

[dependencies]
abacus-registers-dsl = { version = "0.1.0"}
tock-registers = "0.9.0"
