[package]
name = "abacus-registers-dsl"
version = "0.1.0"
description = "Procedural macros used for encoding the Abacus DSL and generating the needed type-states."
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = { version = "2.0.87", features = ["full"] }
